Fixes the preview getting cut off at the right.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -2819,7 +2819,7 @@ table.links {
 .content-preview {
     display: none;
     overflow: hidden;
-    margin: -10px 0 -10px -10px;
+    margin: -10px;
     padding: 10px 0 10px 10px;
     position: absolute;
     width: 150px;
